# UniversalLevelEditor

./: .gitignore  CMakeLists.txt  Makefile  README.md  Universal-Level-Editor  config.cpp  config.h  globals.h  gui.cpp  gui.h  imgui.ini  main.cpp  stamp.cpp  stamp.h  tilemap.cpp  tilemap.h  tileset.cpp
Games/Donkey Kong Country/: donkey-kong-country.config
Games/Metal Warriors/: metal-warriors.config  metal-warriors_2.config
Games/Template Game/: template-game.config
assets/configs/: donkey-kong-country.json  metal-warriors.json
src/: main.cpp
src/engine/: config.cpp  config.h  globals.cpp  globals.h  tileset.h
src/graphics/: shaders.cpp  shaders.h
src/gui/: gui.cpp  stamp.cpp  stamp.h
